big query builder fixes. Full implement of users crud

--- a/.env
+++ b/.env
@@ -10,3 +10,7 @@ DB_PASSWORD=7jhGgLTp0Vo7Ji0vX1cTHREEj3nVv45-
 DB_HOST=hattie.db.elephantsql.com
 DATABASE_URL=postgres://lhglvlyi:7jhGgLTp0Vo7Ji0vX1cTHREEj3nVv45-@hattie.db.elephantsql.com/lhglvlyi
 
+
+SALT_ROUNDS = 10
+HASH_SECRET = 'i_love_my_sonechka'
+
