--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
     "@types/bcrypt": "^5.0.0",
     "@types/pg": "^8.6.5",
     "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.6",
+    "dayjs": "^1.11.1",
     "dotenv": "^16.0.0",
     "node-pg-migrate": "^6.2.1",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "simple-crypto-js": "^3.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
